Make the plugin Windows and configuration cache compatible
Created separate task classes for imageRun and imageModules tasks
in order to make them configuration cache compatible as JavaExec
is too coupled with Jvm toolchains and does not allow overriding
the executable at the execution stage.

Removed in process jlink execution as the `jlink` tool provider
not thread safe and running multiple tasks concurrently results in
an error (byproduct of having configuration cache enabled).